--- a/app/src/main/res/layout/activity_restaurants.xml
+++ b/app/src/main/res/layout/activity_restaurants.xml
@@ -13,12 +13,10 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp" />
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView"
+        android:layout_height="match_parent"
         android:layout_below="@+id/locationTextView"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:id="@+id/recyclerView"/>
 
 </RelativeLayout>
